--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,21 +9,21 @@
 <form name='form-login' action="login" method='POST'>
     <table>
         <tr>
-            <td>Login:</td>
-            <td><input type='text' name='login' value=''></td>
+            <td>login:</td>
+            <td><input type='text' name='username' value=''/></td>
         </tr>
         <tr>
-            <td>Password:</td>
-            <td><input type='password' name='password' /></td>
+            <td>password:</td>
+            <td><input type='password' name='password'/></td>
         </tr>
         <tr>
-            <td><input name="submit" type="submit" value="submit" /></td>
+            <td><input name="submit" type="submit" value="submit"/></td>
         </tr>
     </table>
 </form>
 <h1>Don't have login?</h1>
 <form action="/auth/register" method="POST">
-    <button type="submit">Registration</button>
+    <button type="submit">registration</button>
 </form>
 </body>
 </html>
