Moves to real DB and adds adding to friends

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
     </table>
 </form>
 <h1>Don't have login?</h1>
-<form action="/auth/register" method="POST">
+<form action="/auth/register" method="GET">
     <button type="submit">registration</button>
 </form>
 </body>
