--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Registration page</h1>
-<form action="/auth/confirm" th:object="${userDto}" method="POST" enctype="utf8">
+<form action="/auth/register" th:object="${userDto}" method="POST" enctype="utf8">
     <div>
         <label th:text="login">login</label><br>
         <input th:field="*{login}"/>
