Adds add to friends and not found view  resolving

--- a/src/main/resources/templates/not-found.html
+++ b/src/main/resources/templates/not-found.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Success page</title>
+    <title>User not found page</title>
 </head>
 <body>
+<h1>User not found</h1>
+<form action="/current-user" method="GET">
+    <button type="submit">Your page</button>
+</form>
+<br>
 <form action="/auth/logout" method="POST">
     <button type="submit">Logout</button>
 </form>
